# mjeku-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml  ios-build.yml  ios-init.yml
ci_scripts/: ci_post_clone.sh  patch_ios_plist.sh
docs/: supabase_offers_v0.4.9.sql  supabase_schema.sql
frontend-dist/: index.html
scripts/: build_tauri_release_win.cmd  generate_icons.py  prepare_ui_seed.mjs  run_cargo_test_win.cmd  run_tauri_dev_win.cmd  run_tauri_dev_win_bg.cmd  start_tauri_dev_win.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: ui-seed-version.txt
src-tauri/src/: auth.rs  db.rs  desktop_updates.rs  error_logs.rs  invoice.rs  lab_devices.rs  lib.rs  license_engine.rs  main.rs  models.rs  sync_engine.rs  ui_protocol.rs  updates.rs  util.rs
