[package]
name = "mjeku_desktop"
version = "0.5.7"
description = "Mjeku Desktop"
authors = ["Mjeku"]
edition = "2021"

[lib]
name = "mjeku_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
mime_guess = "2.0.5"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
zip = "0.6.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
open = "5.3.1"
serialport = "4.6"

